# curly-octo-goggles

./: .pre-commit-config.yaml  Makefile  Project plan.rtf  README.md  pyproject.toml  requirements.txt  validation.json
.github/workflows/: ci.yml
data/: simple_model.pt  simple_model_12epoch.pt  simple_model_5epoch.pt
docs/: api.md  architecture.md  theory.md
docs/examples/: convergence_seed_0.json  convergence_seed_1.json  convergence_seed_2.json  convergence_seed_3.json  convergence_seed_4.json  convergence_validator_baseline.json  cpu_validation_baseline.json  random_search_seed0.json  random_search_seed123.json  scan_summary.json
experiments/: __init__.py
experiments/tasks/: __init__.py  memory_tasks.py  reasoning_tasks.py  streaming_tasks.py
experiments/theory/: __init__.py  convergence_proofs.py  energy_analysis.py
model/: __init__.py  config.py  network.py
notebooks/: demo.ipynb
runs/: overnight_finished.txt
runs/associative_long/: model.pt
runs/associative_smoke/: model.pt
scripts/: generate_simple.py  prepare_corpus.py  profile_solver.py  random_validation.py  run_validation.py  scan_validation.py  train_associative_recall.py  train_dummy.py  train_simple.py
src/training/: objectives.py  trainer.py
src/unified_energy.egg-info/: PKG-INFO  SOURCES.txt  (+2 more)
tests/: __init__.py  test_advanced_components.py  test_beta_schedule.py  test_dynamics.py  test_energy.py  test_experiments.py  test_model.py  test_network.py  test_rolling_context.py  test_simple_model.py  test_simple_scripts.py  test_solver.py  test_tasks.py  test_training.py
(+40 files in other folders)
